--- a/Modules/Front/Resources/assets/sass/app.scss
+++ b/Modules/Front/Resources/assets/sass/app.scss
@@ -1,4 +1,11 @@
-/* LOGOS */
+/* Variables */
+:root {
+    --title-font: 30px;
+    --description-font: 23px;
+    --abacus-red: #bf4740;
+  }
+
+/* Logos */
 
 .hometrend-logo {
     width: 240px !important;
@@ -46,7 +53,69 @@
     align-items: center !important;
 }
 
-/* OTHER CLASSES */
+
+/* Navigation bar */
+
+.navbar.navbar-expand-lg.navbar-dark {
+    width: 100% !important;
+    background-color: rgba(104, 102, 102, 0.8);
+    margin-top: 25px;
+}
+
+.dropbtn {
+  background-color: #bf4740;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 15px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #bf4740;
+    border-radius: 15px;
+    text-decoration: none;
+    color: white;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #bf4740;
+}
+
+/* esFinx */
+
+.esfinx-header {
+    background-color: #f9f9f9;
+    height: 350px;
+}
+
+/* Other classes */
 
 @media (min-width: 1200px) {
     .container, .container-sm, .container-md, .container-lg, .container-xl {
@@ -62,4 +131,28 @@
 .page-client .row .item {
     padding-top: 20px !important;
     padding-bottom: 20px !important;
+}
+
+/* eSFinx */
+
+.container-esfnix {
+    margin: 6% 13% 6% 13%;
+}
+
+.esfinx-description {
+    padding: 0% 3% 9% 3%;
+    text-align: center;
+    font-size: var(--description-font);
+}
+
+.esfinx-points {
+    font-size: var(--description-font); 
+}
+
+.esfinx-ul {
+    list-style-type: none;
+
+    li {
+        padding-top: 10px;
+    }
 }
